<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/btn_surname_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPatronymic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/btn_patronymic_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/btn_group_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editPatronymic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editPatronymic"
        app:layout_constraintTop_toBottomOf="@+id/editPatronymic" />

    <EditText
        android:id="@+id/editCourse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/btn_course_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editGroup"
        app:layout_constraintStart_toStartOf="@+id/editGroup"
        app:layout_constraintTop_toBottomOf="@+id/editGroup" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/btn_name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editSurname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editSurname"
        app:layout_constraintTop_toBottomOf="@+id/editSurname" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="209dp"
        android:layout_height="96dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btn_save"
        android:textColor="#263238"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editCourse"
        app:layout_constraintStart_toStartOf="@+id/editCourse"
        app:layout_constraintTop_toBottomOf="@+id/editCourse" />
</androidx.constraintlayout.widget.ConstraintLayout>